<resources>
    <string name="app_name">RestaurantApp</string>

    <string name="app_n_name">Get Rec\'d</string>

    <string name="place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\n
    </string>

    <string name="place_name">
        %1$s\n
    </string>

    <string name="place_rating">
        %1$s\n
    </string>

    <string name="title_activity_posts">Restaurant Suggestions</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_add_friend">Add Friends</string>
    <string name="title_activity_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="free">$10-</string>
    <string name="cheap">$10-$20</string>
    <string name="moderate">$20-$50</string>
    <string name="expensive">$50+</string>

    <string name="basically_free">Basically Free (under $10)</string>
    <string name="affordable">Cheap ($10-$20)</string>
    <string name="techy">Moderate ($20-$50)</string>
    <string name="paycheck">Paycheck ($50+)</string>

    <string name="veg">Veggie Options?</string>
    <string name="resAccepted">Reservations Accepted?</string>


    <string name="not_accepted">no</string>
    <string name="accepted">yes</string>
    <string name="recommended">I would</string>
    <string name="hard_to_get">Do, but hard</string>
    <string name="unknown">N/A</string>

    <string name="no_wait">0-10</string>
    <string name="short_wait">10-30</string>
    <string name="long_wait">30-60</string>
    <string name="forever">60+</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>

    <string name="no_alcohol">Nada</string>
    <string name="soft_alcohol">Soft</string>
    <string name="hard_alcohol">Hard</string>
    <string name="all_alcohol">Bar</string>

    <string name="only_options">Only</string>
    <string name="lots_options">Lots</string>
    <string name="few_options">A Few</string>
    <string name="no_options">None</string>

    <string name="lighting_hint">Lighting from dark to bright</string>
    <string name="gluten_hint">Gluten-free options?</string>
    <string name="veg_hint">Vegetarian options?</string>
    <string name="service_hint">Service from non existent to phenomenal</string>
    <string name="location_hint">Location from sleepy to busy</string>
    <string name="noise_hint">Noise from silent to loud</string>
    <string name="alcohol_hint">Drink options?</string>
    <string name="wait_hint">Without a reservation, how many minutes is the wait?</string>
    <string name="price_hint">Average price?</string>
    <string name="res_hint">Reservations?</string>
    <string name="ethnicity_hint">What type of food is it?</string>
    <string name="dish_hint">Dishes to get/avoid?</string>
    <string name="note_hint">Anything to add?</string>

    <string name="send_create">SUBMIT</string>

    <string name="add_friend">Add Friend</string>
    <string name="view_friends">View Friends</string>
    <string name="about">About</string>
    <string name="posts">Posts</string>

    <string name="user_rating">user rating</string>
    <string name="google_rating">google rating</string>

    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="add_friend_hint">Enter friend\'s username</string>

    <string name="icons">Icon Key</string>
    <string name="icon_source">Icons taken from <a href="https://icons8.com/web-app/6536/Vegan-Food">Vegan food icon credits</a></string>
    <string name="about_get">About Get Rec\'d*</string>
    <string name="creds">Creds to Carolyn and Sam for the same</string>

    <string name="unknown_desc">Information unknown or n/a</string>

    <string name="res_red">Reservations are not accent</string>
    <string name="res_one">Reservations are not accepted</string>
    <string name="res_two">Reservations are accepted and but very hard to get</string>
    <string name="res_three">Reservations are accepted and I would recommend getting one</string>
    <string name="res_four">Reservations are accepted</string>

    <string name="wait_one">The wait averages at over an hour, the food is probably amazing.</string>
    <string name="wait_two">The wait is normally long, bring a book or try somewhere else - 30 minutes to an hour.</string>
    <string name="wait_three">The wait is reasonable, between 10 minutes and a half hour.</string>
    <string name="wait_four">There is usually a very short wait, around 0 to 10 minutes.</string>

    <string name="alc_one">You\'re sticking with water, they don\'t serve alcohol.</string>
    <string name="alc_two">You can get beer and wine, but not much more.</string>
    <string name="alc_three">They have a hard liquor license, ie they can serve you cocktails.</string>
    <string name="alc_four">Either they have a notably full/extensive bar, or it is a bar.</string>

    <string name="glut_one">There are no gluten free options.</string>
    <string name="glut_two">There\'s at least one option that is gluten free.</string>
    <string name="glut_three">There are amble options that are gluten free.</string>
    <string name="glut_four">The entire place is gluten free.</string>

    <string name="veg_one">There are no vegetarian options.</string>
    <string name="veg_two">At least one dish is vegetarian.</string>
    <string name="veg_three">Lots of vegetarian dishes to choose from.</string>
    <string name="veg_four">The entire place is vegetarian.</string>
</resources>
