<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/posts"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/posts"/>

    <item android:id="@+id/add_friend"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add_friend"/>

    <item android:id="@+id/view_friends"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/view_friends"/>

    <item android:id="@+id/about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/about"/>

    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="Logout" />

</menu>
