<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    xmlns:tools="http://schemas.android.com/tools"

    <LinearLayout
        android:id="@+id/activity_write_post"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <fragment
            android:id="@+id/place_fragment"
            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></fragment>

        <EditText
            android:id="@+id/etEthnicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ethnicity_hint"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etDishes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dish_hint" />


        <RatingBar
            android:id="@+id/userRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:rating="0.0" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>

            <RadioGroup
                android:id="@+id/priceRange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/basicallyFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/free"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/cheap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cheap"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/moderate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/moderate"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/expensive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/expensive"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/unknownPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/unknown"
                    android:textSize="@dimen/radio_button_txt_size" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/res_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>

            <RadioGroup
                android:id="@+id/reservations"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/notAccepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/not_accepted"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/accepted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/accepted"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/recommended"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/hardToGet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/hard_to_get"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/unknownRes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/unknown"
                    android:textSize="@dimen/radio_button_txt_size" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/waittime"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/no_wait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/no_wait"
                        android:textSize="@dimen/radio_button_txt_size" />

                    <RadioButton
                        android:id="@+id/short_wait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/short_wait"
                        android:textSize="@dimen/radio_button_txt_size" />

                    <RadioButton
                        android:id="@+id/long_wait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/long_wait"
                        android:textSize="@dimen/radio_button_txt_size" />

                    <RadioButton
                        android:id="@+id/forever_wait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/forever"
                        android:textSize="@dimen/radio_button_txt_size" />

                    <RadioButton
                        android:id="@+id/unknownWait"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/unknown"
                        android:textSize="@dimen/radio_button_txt_size" />
                </RadioGroup>

            </ScrollView>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/veg_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>


            <RadioGroup
                android:id="@+id/veg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/veg_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/no_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/veg_few"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/few_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/veg_lots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/lots_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/veg_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/only_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/unknownVeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/unknown"
                    android:textSize="@dimen/radio_button_txt_size" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gluten_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>

            <RadioGroup
                android:id="@+id/gluten"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gluten_none"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/no_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/gluten_few"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/few_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/gluten_lots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/lots_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/gluten_only"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/only_options"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/unknownGluten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/unknown"
                    android:textSize="@dimen/radio_button_txt_size" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alcohol_hint"
                android:textSize="@dimen/radio_text_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/radioUnderline"></View>


            <RadioGroup
                android:id="@+id/alcohol"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/no_alcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/no_alcohol"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/soft_alcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/soft_alcohol"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/hard_alcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/hard_alcohol"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/all_alcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/all_alcohol"
                    android:textSize="@dimen/radio_button_txt_size" />

                <RadioButton
                    android:id="@+id/unknownAlcohol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/unknown"
                    android:textSize="@dimen/radio_button_txt_size" />
            </RadioGroup>

        </LinearLayout>


        <EditText
            android:id="@+id/etBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_title"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollHorizontally="false" />


        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_create" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/txt_attributions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp" />

    </LinearLayout>
</ScrollView>